# azure-ai-search-agentic-retrieval-demo

./: .azdignore  .env.example  .gitignore  AGENTS.md  README.md  azure.yaml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/backend/: Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/backend/agents/: __init__.py  ai_research_agent.py  cloud_sustainability_agent.py  orchestrator.py  space_science_agent.py  standards_agent.py
app/backend/static/: index.html
app/backend/static/assets/: index-BEOUsKBW.js  index-Ba5x_Bgy.css  index-Btmgv4nv.css  index-CpQygasT.js  index-DuSJVMr3.js  index-h4O177tW.js  index-x8TxliMo.js
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.tsx  api.ts  index.css  types.ts
app/frontend/src/components/: ChatInput.tsx  ChatLayout.tsx  ChatMessage.tsx  CitationPanel.tsx  MarkdownRenderer.tsx  RetrievalJourney.tsx  SuggestedQuestions.tsx  WelcomeScreen.tsx
data/: README.md  catalog.json
data/sample-docs/: README.md
docs/: MANUAL_STEPS.md  architecture.md  deployment.md
infra/: main.bicep  main.bicepparam
infra/modules/: ai-foundry.bicep  ai-search.bicep  ai-services.bicep  container-apps.bicep  container-registry.bicep  keyvault.bicep  openai.bicep  storage.bicep
scripts/: 00_download_documents.py  00_download_documents.sh  01_deploy_infra.ps1  02_upload_documents.py  02_upload_documents.sh  03_create_knowledge.py  03_create_knowledge.sh  04_create_agent.py  05_cleanup.py  06_cleanup.sh
scripts/utils/: config.py  config.sh
